fix: add input-area gap

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -30,6 +30,7 @@ body {
     padding: 10px;
     flex-shrink: 0;
     align-items: center;
+    gap: 1em;
 }
 
 #sidebar {
